--- a/styles/index.css
+++ b/styles/index.css
@@ -14,6 +14,14 @@ body {
   margin: 0;
 }
 
+p {
+  margin: 1.3rem 0 0;
+}
+
+p:first-child {
+  margin-top: 0;
+}
+
 body > header {
   display: flex;
   justify-content: flex-start;
@@ -21,7 +29,7 @@ body > header {
 
 body > header > nav {
   max-width: 1024px;
-  padding: 1.7rem 2.6rem 0;
+  padding: 1.7rem 1.6rem 0;
 }
 
 body > header > nav > ul {
@@ -32,21 +40,18 @@ body > header > nav > ul {
   flex-wrap: wrap;
 }
 
-body > header > nav > ul > li:not(:last-child) {
-  margin-right: 1.7rem;
-}
-
 body > header > nav > ul > li > a {
   text-decoration: none;
-  font-size: 0.8em;
+  font-size: 0.7em;
   font-weight: 600;
   text-transform: uppercase;
   color: var(--black);
   line-height: 4em;
   padding-bottom: 2px;
+  padding: 0 1rem;
 }
 
-body > header > nav > ul > li.active > a {
+body > header > nav > ul > li.active > a > span {
   border-bottom: 2px solid var(--brand-bright);
 }
 
@@ -61,7 +66,30 @@ div.title {
 }
 
 div.title > span {
+  display: block;
   font-size: 1.4em;
+}
+
+div.title--cover {
+  margin-top: 3rem;
+}
+
+div.title--cover > img.cover {
+  display: block;
+  width: 100%;
+  box-shadow: 0 12px 41px var(--black-shadow);
+}
+
+div.title--cover > img.cover + h1 {
+  margin-top: 1.8rem;
+}
+
+div.title--cover > img.cover + h1::after {
+  top: -6.5rem;
+}
+
+div.title + section {
+  margin-top: 9rem;
 }
 
 h1 {
@@ -70,16 +98,31 @@ h1 {
   position: relative;
 }
 
+h1 + span {
+  margin-top: 0.5em;
+}
+
+.project h1 {
+  font-size: 2.9em;
+}
+
 h1::after {
   content: "";
   display: block;
-  height: 17.1rem;
-  width: 17.1rem;
+  height: 12rem;
+  width: 12rem;
   border-radius: 50%;
   background: var(--brand-bright);
   box-shadow: 0 20px 66px var(--brand-shadow);
   position: absolute;
   z-index: -1;
+  right: -6rem;
+  top: -5rem;
+}
+
+.home h1::after {
+  height: 17.1rem;
+  width: 17.1rem;
   right: -7rem;
   top: -5rem;
 }
@@ -89,9 +132,16 @@ h2 {
   margin: 0 0 2rem;
 }
 
-section.projects {
-  margin-top: 9rem;
+section {
   padding: 0 2.6rem;
+}
+
+section.projects {
+  margin: 9rem 0;
+}
+
+.home section.projects {
+  margin-bottom: 0;
 }
 
 section.projects > article {
@@ -101,6 +151,7 @@ section.projects > article {
 section.projects > article a {
   color: var(--black);
   text-decoration: none;
+  display: block;
 }
 
 section.projects > article:not(:first-child) {
@@ -114,9 +165,46 @@ section.projects > article img {
 }
 
 section.projects > article h3 {
+  font-size: 1.7em;
+  font-weight: 700;
+  margin: 1.25rem 0 0;
+}
+
+.home section.projects > article h3 {
   font-size: 1.1em;
   font-weight: 600;
   margin: 0.75rem 0 0;
+}
+
+section.projects > article p {
+  font-size: 1;
+  margin: 0.8rem 0 0;
+}
+
+section.projects > article p.read-more {
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+}
+
+section.projects a.all-projects::after,
+section.projects > article p.read-more::after {
+  display: block;
+  content: "";
+  position: absolute;
+  right: -1em;
+  top: 0.55em;
+  height: 0.4em;
+  width: 0.4em;
+  border-width: 2px 2px 0 0;
+  border-style: solid;
+  border-color: var(--black);
+  transform: rotate(45deg);
+}
+
+section.projects > article p.read-more::after {
+  top: 0.6em;
 }
 
 section.projects a.all-projects {
@@ -130,18 +218,77 @@ section.projects a.all-projects {
   position: relative;
 }
 
-section.projects a.all-projects::after {
+section.intro {
+  margin-top: 4rem;
+}
+
+dl.key-data {
+  margin: 3.6em 0 0;
+}
+
+dl.key-data div {
+  margin-top: 0.5rem;
+}
+
+dl.key-data dt {
+  font-weight: 700;
+  display: inline;
+}
+
+dl.key-data dt::after {
+  content: ": ";
+}
+
+dl.key-data dd {
+  display: inline;
+  margin: 0;
+}
+
+dl.key-data dd:not(:last-child)::after {
+  content: ", ";
+}
+
+a.back {
+  font-weight: 700;
+  text-transform: uppercase;
+  position: relative;
+  display: inline-block;
+  padding: 0 0 0 1em;
+  color: var(--black);
+  text-decoration: none;
+  margin: 9rem 0;
+}
+
+a.back::before {
   display: block;
   content: "";
   position: absolute;
-  right: -1em;
+  left: 0;
   top: 0.55em;
   height: 0.4em;
   width: 0.4em;
   border-width: 2px 2px 0 0;
   border-style: solid;
   border-color: var(--black);
-  transform: rotate(45deg);
+  transform: rotate(-135deg);
+}
+
+body.profile dl dt {
+  font-weight: 700;
+  margin-top: 1.7rem;
+}
+
+body.profile dl dt + dd {
+  margin-top: 0.4rem;
+}
+
+body.profile dl dd {
+  margin: 0;
+}
+
+body.profile dl.lists dd::before {
+  content: "—";
+  padding-right: 0.5em;
 }
 
 section.about-me {
