--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,8 @@
   --brand-bright: #b4acff;
   --brand-shadow: rgba(96, 51, 223, 0.23);
   --brand-dark: #5532d2;
+  --section-margin: 9rem;
+  --canvas-padding: 2.6rem;
   font: normal 14px/26px "commuters-sans";
 }
 
@@ -12,6 +14,14 @@ body {
   color: var(--black);
   background: var(--white);
   margin: 0;
+}
+
+a {
+  color: var(--brand-dark);
+}
+
+a:hover {
+  color: var(--black);
 }
 
 p {
@@ -61,7 +71,7 @@ main {
 
 div.title {
   margin-top: 7.8rem;
-  padding: 0 2.6rem;
+  padding: 0 var(--canvas-padding);
   z-index: 1;
 }
 
@@ -89,7 +99,7 @@ div.title--cover > img.cover + h1::after {
 }
 
 div.title + section {
-  margin-top: 9rem;
+  margin-top: var(--section-margin);
 }
 
 h1 {
@@ -133,11 +143,8 @@ h2 {
 }
 
 section {
-  padding: 0 2.6rem;
-}
-
-section.projects {
-  margin: 9rem 0;
+  padding: 0 var(--canvas-padding);
+  margin: var(--section-margin) 0 0;
 }
 
 .home section.projects {
@@ -155,7 +162,7 @@ section.projects > article a {
 }
 
 section.projects > article:not(:first-child) {
-  margin-top: 2.6rem;
+  margin-top: var(--canvas-padding);
 }
 
 section.projects > article img {
@@ -208,7 +215,7 @@ section.projects > article p.read-more::after {
 }
 
 section.projects a.all-projects {
-  margin: 10rem 0;
+  margin: var(--section-margin) 0;
   font-size: 1.1em;
   font-weight: 600;
   text-transform: uppercase;
@@ -294,11 +301,12 @@ body.profile dl.lists dd::before {
 section.about-me {
   background: var(--black);
   color: var(--white);
-  padding: 10rem 2.6rem;
+  padding-top: var(--section-margin);
+  padding-bottom: var(--section-margin);
 }
 
 footer {
-  padding: 10rem 2.6rem;
+  padding: var(--section-margin) var(--canvas-padding);
   font-size: 0.9em;
   letter-spacing: 0.03em;
   font-weight: 700;
