--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,22 @@
   font: normal 14px/26px "commuters-sans";
 }
 
+@media (min-width: 1200px) {
+  :root {
+    font: normal 17px/29px "commuters-sans";
+  }
+}
+
+@media (min-width: 1600px) {
+  :root {
+    font: normal 20px/32px "commuters-sans";
+  }
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   color: var(--black);
   background: var(--white);
@@ -32,17 +48,55 @@ p:first-child {
   margin-top: 0;
 }
 
-body > header {
-  display: flex;
-  justify-content: flex-start;
+dl {
+  margin: 1.3em 0 0;
 }
 
-body > header > nav {
-  max-width: 1024px;
+dl dt {
+  font-weight: 700;
+  margin-top: 1.7rem;
+}
+
+dl dt + dd {
+  margin-top: 0.4rem;
+}
+
+dl dd {
+  margin: 0;
+}
+
+dl.lists dd::before {
+  content: "—";
+  padding-right: 0.5em;
+}
+
+ul {
+  list-style: "—";
+  margin: 1.3em 0 0;
+  padding: 0 0 0 0.8em;
+}
+
+ul > li {
+  padding: 0 0 0 0.5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+header > nav {
   padding: 1.7rem 1.6rem 0;
 }
 
-body > header > nav > ul {
+header > nav > ul {
   list-style: none;
   display: flex;
   margin: 0;
@@ -50,7 +104,11 @@ body > header > nav > ul {
   flex-wrap: wrap;
 }
 
-body > header > nav > ul > li > a {
+header > nav > ul > li {
+  padding: 0;
+}
+
+header > nav > ul > li > a {
   text-decoration: none;
   font-size: 0.7em;
   font-weight: 600;
@@ -61,59 +119,112 @@ body > header > nav > ul > li > a {
   padding: 0 1rem;
 }
 
-body > header > nav > ul > li.active > a > span {
+header > nav > ul > li.active > a > span {
   border-bottom: 2px solid var(--brand-bright);
 }
+
+@media (min-width: 41.8rem) {
+  header {
+    display: flex;
+    justify-content: center;
+  }
+
+  header > nav {
+    width: 47rem;
+  }
+
+  header > nav > ul > li > a {
+    font-size: 1em;
+    font-weight: 700;
+    line-height: 2em;
+  }
+}
+
+@media (min-width: 1200px) {
+  header {
+    display: flex;
+    justify-content: center;
+  }
+
+  header > nav {
+    padding: 4.5rem 0 0;
+    width: 51.2rem;
+  }
+
+  header > nav > ul > li {
+    margin-left: 2.5rem;
+  }
+
+  header > nav > ul > li:first-child {
+    margin-left: 0;
+  }
+
+  header > nav > ul > li > a {
+    font-size: 1em;
+    font-weight: 700;
+    padding: 0;
+  }
+}
+
+@media (min-width: 1600px) {
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 41.8rem) {
+  div.title,
+  section,
+  footer {
+    display: flex;
+    justify-content: center;
+  }
+
+  div.title > .wrapper,
+  section > .wrapper,
+  footer > .wrapper {
+    width: 41.8rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  div.title > .wrapper,
+  section > .wrapper,
+  footer > .wrapper {
+    width: 51.2rem;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 main {
   overflow: hidden;
 }
 
-div.title {
-  margin-top: 7.8rem;
-  padding: 0 var(--canvas-padding);
-  z-index: 1;
-}
-
-div.title > span {
-  display: block;
-  font-size: 1.4em;
-}
-
-div.title--cover {
-  margin-top: 3rem;
-}
-
-div.title--cover > img.cover {
-  display: block;
-  width: 100%;
-  box-shadow: 0 12px 41px var(--black-shadow);
-}
-
-div.title--cover > img.cover + h1 {
-  margin-top: 1.8rem;
-}
-
-div.title--cover > img.cover + h1::after {
-  top: -6.5rem;
-}
-
-div.title + section {
-  margin-top: var(--section-margin);
-}
-
 h1 {
   font: normal 4.1em "flood-std";
-  margin: 1rem 0 0.5em;
+  margin: 1rem 0 0;
   position: relative;
-}
-
-h1 + span {
-  margin-top: 0.5em;
-}
-
-.project h1 {
-  font-size: 2.9em;
 }
 
 h1::after {
@@ -137,50 +248,122 @@ h1::after {
   top: -5rem;
 }
 
+.project h1 {
+  font-size: 2.9em;
+}
+
 h2 {
   font: normal 2.1em "flood-std";
-  margin: 0 0 2rem;
+  margin: 4rem 0 2rem;
 }
+
+h3 {
+  font-size: 1.7em;
+  font-weight: 700;
+  margin: 1.25rem 0 0;
+}
+
+.home h3 {
+  font-size: 1.1em;
+  font-weight: 600;
+  margin: 0.75rem 0 0;
+}
+
+h1:first-child,
+h2:first-child,
+h3:first-child {
+  margin-top: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+div.title {
+  margin-top: 7.8rem;
+  padding: 0 var(--canvas-padding);
+  z-index: 1;
+}
+
+div.title > .wrapper > span {
+  display: block;
+  font-size: 1.4em;
+}
+
+h1 + span {
+  margin-top: 0.5em;
+}
+
+div.title--cover {
+  margin-top: 3rem;
+}
+
+div.title--cover > .wrapper > img.cover {
+  display: block;
+  width: 100%;
+  box-shadow: 0 12px 41px var(--black-shadow);
+}
+
+div.title--cover > .wrapper > img.cover + h1 {
+  margin-top: 1.8rem;
+}
+
+div.title--cover > .wrapper > img.cover + h1::after {
+  top: -6.5rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 section {
   padding: 0 var(--canvas-padding);
   margin: var(--section-margin) 0 0;
 }
 
-.home section.projects {
-  margin-bottom: 0;
-}
-
 section.projects > article {
   position: relative;
+  margin-top: var(--canvas-padding);
+}
+
+section.projects > article:first-child {
+  margin-top: 0;
 }
 
 section.projects > article a {
   color: var(--black);
-  text-decoration: none;
   display: block;
-}
-
-section.projects > article:not(:first-child) {
-  margin-top: var(--canvas-padding);
 }
 
 section.projects > article img {
   display: block;
   width: 100%;
   box-shadow: 0 12px 41px var(--black-shadow);
-}
-
-section.projects > article h3 {
-  font-size: 1.7em;
-  font-weight: 700;
-  margin: 1.25rem 0 0;
-}
-
-.home section.projects > article h3 {
-  font-size: 1.1em;
-  font-weight: 600;
-  margin: 0.75rem 0 0;
 }
 
 section.projects > article p {
@@ -225,10 +408,6 @@ section.projects a.all-projects {
   position: relative;
 }
 
-section.intro {
-  margin-top: 4rem;
-}
-
 dl.key-data {
   margin: 3.6em 0 0;
 }
@@ -237,18 +416,13 @@ dl.key-data div {
   margin-top: 0.5rem;
 }
 
-dl.key-data dt {
-  font-weight: 700;
+dl.key-data dt,
+dl.key-data dd {
   display: inline;
 }
 
 dl.key-data dt::after {
   content: ": ";
-}
-
-dl.key-data dd {
-  display: inline;
-  margin: 0;
 }
 
 dl.key-data dd:not(:last-child)::after {
@@ -263,7 +437,7 @@ a.back {
   padding: 0 0 0 1em;
   color: var(--black);
   text-decoration: none;
-  margin: 9rem 0;
+  margin: var(--section-margin) 0 0;
 }
 
 a.back::before {
@@ -280,23 +454,51 @@ a.back::before {
   transform: rotate(-135deg);
 }
 
-body.profile dl dt {
-  font-weight: 700;
-  margin-top: 1.7rem;
+
+
+dt.blur,
+dd.blur {
+  opacity: 0.5;
 }
 
-body.profile dl dt + dd {
-  margin-top: 0.4rem;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+address {
+  font-style: normal;
+  margin-top: 1.3em;
 }
 
-body.profile dl dd {
-  margin: 0;
-}
 
-body.profile dl.lists dd::before {
-  content: "—";
-  padding-right: 0.5em;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 section.about-me {
   background: var(--black);
@@ -304,6 +506,29 @@ section.about-me {
   padding-top: var(--section-margin);
   padding-bottom: var(--section-margin);
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 footer {
   padding: var(--section-margin) var(--canvas-padding);
@@ -320,6 +545,10 @@ footer ul {
 
 footer li:not(:first-child) {
   margin-top: 0.5rem;
+}
+
+footer li {
+  padding: 0;
 }
 
 footer a {
