--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -524,10 +524,13 @@ section.projects a.all-projects {
     grid-column-start: 1;
   }
 
-  body.projects section.projects article > a h3 {
+  body.projects section.projects article > a h2 {
     grid-column: 2 / 4;
     grid-row-start: 2;
     font-size: 1.4em;
+    font-weight: 700;
+    margin: 0;
+    font-family: "commuters-sans";
   }
 
   body.projects section.projects article > a ul {
