feat: redesign other pages

--- a/site/css/_footer.scss
+++ b/site/css/_footer.scss
@@ -15,7 +15,7 @@ footer {
 
   li {
     font-size: 0.8rem;
-    margin-top: 0.4rem;
+    margin: 0.4rem 0 0 0;
 
     &::marker {
       color: transparent;
@@ -28,6 +28,10 @@ footer {
 
     &:hover {
       color: var(--color-link-hover);
+    }
+
+    &[aria-current="page"] {
+      font-weight: 700;
     }
   }
 
