--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @font-face {
   font-family: "Borna";
   src: url("/assets/fonts/borna-regular.woff2") format("woff2"), url("/assets/fonts/borna-regular.woff") format("woff"), url("/assets/fonts/borna-regular.ttf") format("truetype");
@@ -121,7 +122,7 @@
 }
 
 html {
-  font: 20px var(--font-family);
+  font: 20px/1.3 var(--font-family);
   color: var(--color-text);
 }
 
@@ -199,14 +200,17 @@ a.back {
 a.back:hover {
   color: var(--color-link-hover);
 }
+a.contact {
+  color: var(--color-text);
+  text-decoration: none;
+}
+a.contact:hover {
+  color: var(--color-link-hover);
+}
 
 p {
   margin: 0.6em 0 0;
-}
-
-address {
-  font-style: normal;
-  margin-top: 1.3em;
+  max-width: 45em;
 }
 
 h1 {
@@ -215,14 +219,56 @@ h1 {
 }
 
 h2 {
-  font-size: 0.8rem;
-  font-weight: 400;
-  margin: 0 0 var(--padding-scaled-05);
+  color: var(--color-text-10);
+  font-weight: 600;
+  margin: var(--padding-scaled-2) 0 var(--padding-scaled-05) -0.05em;
+  font-size: min(5vw + 0.4rem, 4rem);
+  line-height: min(5vw + 0.8rem - 0.1em, 4rem);
+  max-width: 15em;
 }
 @media (min-width: 768px) {
   h2.scaled {
     margin-left: -0.05em;
   }
+}
+@media (prefers-contrast: more) {
+  h2 {
+    color: var(--color-text);
+    font-weight: 400;
+  }
+}
+
+h3 {
+  font-size: 2rem;
+  margin: 1em 0 0.5em;
+  max-width: 45em;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 1.5rem;
+  margin: 1em 0 0.5em;
+  max-width: 45em;
+  font-weight: 600;
+}
+
+ul {
+  list-style-type: "→ ";
+  padding: 0 0 0 1.25em;
+  margin: 0.6em 0;
+}
+ul.contacts {
+  margin: var(--padding-scaled) 0;
+  padding: 0;
+  list-style-position: inside;
+}
+
+li {
+  max-width: 45em;
+  margin-top: 0.3em;
+}
+li::marker {
+  width: 1.5em;
 }
 
 header {
@@ -241,6 +287,10 @@ nav.languages ul {
   margin: 0;
   padding: 0;
   align-items: baseline;
+}
+nav.main li,
+nav.languages li {
+  margin: 0;
 }
 nav.main li::marker,
 nav.languages li::marker {
@@ -579,7 +629,7 @@ footer ul {
 }
 footer li {
   font-size: 0.8rem;
-  margin-top: 0.4rem;
+  margin: 0.4rem 0 0 0;
 }
 footer li::marker {
   color: transparent;
@@ -590,6 +640,9 @@ footer a {
 }
 footer a:hover {
   color: var(--color-link-hover);
+}
+footer a[aria-current=page] {
+  font-weight: 700;
 }
 footer p.copyright {
   font-size: 0.8rem;
