--- a/assets/css/templates/home.css
+++ b/assets/css/templates/home.css
@@ -2,25 +2,24 @@
   font-weight: 500;
   margin: var(--padding-scaled) 0 var(--padding-scaled) -0.05em;
 }
-
 @media (min-width: 768px) {
   .intro {
     margin-left: -0.075em;
   }
 }
-a.contact {
-  color: var(--color-text);
-  text-decoration: none;
-}
 
-a.contact:hover {
-  color: var(--color-link-hover);
+h2 {
+  font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
+  margin: 0 0 var(--padding-scaled-05);
+  color: var(--color-text);
+  max-width: none;
 }
 
 section.aboutme {
   margin: var(--padding-scaled-2) 0;
 }
-
 section.aboutme p {
   margin-left: -0.05em;
 }
