--- a/site/css/templates/home.scss
+++ b/site/css/templates/home.scss
@@ -1,27 +1,25 @@
 .intro {
   font-weight: 500;
   margin: var(--padding-scaled) 0 var(--padding-scaled) -0.05em;
-}
 
-@media (min-width: 768px) {
-  .intro {
+  @media (min-width: 768px) {
     margin-left: -0.075em;
   }
 }
 
-a.contact {
+h2 {
+  font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
+  margin: 0 0 var(--padding-scaled-05);
   color: var(--color-text);
-  text-decoration: none;
-}
-
-a.contact:hover {
-  color: var(--color-link-hover);
+  max-width: none;
 }
 
 section.aboutme {
   margin: var(--padding-scaled-2) 0;
-}
 
-section.aboutme p {
-  margin-left: -0.05em;
+  p {
+    margin-left: -0.05em;
+  }
 }
