--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,8 @@ body {
   margin: 0;
   padding: var(--padding-scaled);
   background-color: var(--color-background);
+  font-size: min(max(2.5vw + 0.05rem, 0.8rem), 1rem);
+  line-height: min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem);
 }
 
 ::selection {
@@ -175,12 +177,16 @@ a.skip-link {
   position: absolute;
   top: -3rem;
   font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
 }
 a.skip-link:focus {
   top: 1rem;
 }
 a.more {
   font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
   font-weight: 400;
   color: var(--color-text);
   text-decoration: none;
@@ -239,16 +245,18 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
-  margin: 1em 0 0.5em;
-  max-width: 45em;
+  font-size: min(5vw + 0.3rem, 1.75rem);
+  line-height: 1.3;
+  max-width: 20em;
+  margin: 1.5em 0 0.75em;
   font-weight: 600;
 }
 
 h4 {
-  font-size: 1.5rem;
+  font-size: min(5vw + 0.2rem, 1.25rem);
+  line-height: 1.3;
+  max-width: 25em;
   margin: 1em 0 0.5em;
-  max-width: 45em;
   font-weight: 600;
 }
 
@@ -276,7 +284,6 @@ header {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
-  margin-top: -0.25rem;
   gap: 1rem 3rem;
 }
 
@@ -300,6 +307,8 @@ nav.main a,
 nav.languages a {
   color: var(--color-text);
   font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
   text-decoration: none;
   display: block;
 }
@@ -330,7 +339,7 @@ nav.languages li {
   display: flex;
   align-items: baseline;
 }
-nav.languages li.active {
+nav.languages li.active a {
   font-weight: 700;
 }
 nav.languages li:not(:last-child)::after {
@@ -486,78 +495,6 @@ nav.languages li:not(:last-child)::after {
     transform: rotate(45deg);
   }
 }
-div.title {
-  margin-top: 7.8rem;
-  padding: 0 var(--canvas-padding);
-  z-index: 1;
-}
-div.title > .wrapper > span {
-  display: block;
-  font-size: 1.4em;
-}
-div.title h1 + span {
-  margin-top: 0.5em;
-}
-div.title.title--cover {
-  margin-top: 3rem;
-}
-div.title.title--cover .wrapper > #slideshow + h1 {
-  margin-top: 1.8rem;
-}
-div.title.title--cover .wrapper > #slideshow + h1::after {
-  top: -6.5rem;
-}
-@media (min-width: 1200px) {
-  div.title {
-    margin-bottom: 8rem;
-  }
-  .home div.title {
-    margin-top: 10rem;
-  }
-  .home div.title span {
-    line-height: 1.4em;
-  }
-  div.title h1::after {
-    right: auto;
-    left: -4.97rem;
-  }
-  .home div.title h1 {
-    font-size: 8em;
-    margin-top: 0;
-  }
-  .home div.title h1::after {
-    height: 20rem;
-    width: 20rem;
-    left: -7rem;
-    top: -9rem;
-  }
-  .home div.title h1 + span {
-    margin-left: 15.5rem;
-  }
-}
-
-.image {
-  position: relative;
-  width: 100%;
-  height: 0;
-}
-.image.image--video > :only-child {
-  object-fit: contain;
-  background: var(--foreground);
-}
-.image.image--square > :only-child, .image.image--rect > :only-child {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.image.image--square {
-  padding-bottom: 100%;
-}
-.image.image--rect {
-  padding-bottom: 56.25%;
-}
-
 section.works {
   margin: var(--padding-scaled-2) 0;
 }
@@ -585,8 +522,9 @@ article.work a {
   text-decoration: none;
   display: block;
   color: var(--color-text);
-  font-size: 0.8rem;
-  line-height: 1.4;
+  font-size: min(max(2.5vw + 0.05rem, 0.8rem), 1rem);
+  line-height: min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem);
+  max-width: none;
 }
 article.work a:hover {
   color: var(--color-link-hover);
@@ -629,6 +567,8 @@ footer ul {
 }
 footer li {
   font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
   margin: 0.4rem 0 0 0;
 }
 footer li::marker {
@@ -646,6 +586,8 @@ footer a[aria-current=page] {
 }
 footer p.copyright {
   font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
   margin: 0;
 }
 
