--- a/site/css/_global.scss
+++ b/site/css/_global.scss
@@ -1,3 +1,5 @@
+@use "_variables" as v;
+
 * {
   box-sizing: border-box;
 }
@@ -11,6 +13,7 @@ body {
   margin: 0;
   padding: var(--padding-scaled);
   background-color: var(--color-background);
+  @include v.font-sm;
 }
 
 ::selection {
@@ -31,15 +34,11 @@ body {
 }
 
 .scaled--small {
-  font-size: calc(min(5vw + 0.1rem, 1.5rem));
-  line-height: 1.4;
-  max-width: 33em;
+  @include v.font-md;
 }
 
 .scaled {
-  font-size: calc(min(5vw + 0.4rem, 4rem));
-  line-height: calc(min(5vw + 0.8rem - 0.1em, 4rem));
-  max-width: 15em;
+  @include v.font-2xl;
 }
 
 a {
@@ -57,7 +56,7 @@ a {
   &.skip-link {
     position: absolute;
     top: -3rem;
-    font-size: 0.8rem;
+    @include v.font-xs;
 
     &:focus {
       top: 1rem;
@@ -65,7 +64,7 @@ a {
   }
 
   &.more {
-    font-size: 0.8rem;
+    @include v.font-xs;
     font-weight: 400;
     color: var(--color-text);
     text-decoration: none;
@@ -101,7 +100,7 @@ a {
 
 p {
   margin: 0.6em 0 0;
-  max-width: 45em;
+  @include v.font-sm-max-width;
 }
 
 h1 {
@@ -130,16 +129,14 @@ h2 {
 }
 
 h3 {
-  font-size: 2rem;
-  margin: 1em 0 0.5em;
-  max-width: 45em;
+  @include v.font-xl;
+  margin: 1.5em 0 0.75em;
   font-weight: 600;
 }
 
 h4 {
-  font-size: 1.5rem;
+  @include v.font-lg;
   margin: 1em 0 0.5em;
-  max-width: 45em;
   font-weight: 600;
 }
 
@@ -156,7 +153,7 @@ ul {
 }
 
 li {
-  max-width: 45em;
+  @include v.font-sm-max-width;
   margin-top: 0.3em;
 
   &::marker {
