--- a/site/css/_header.scss
+++ b/site/css/_header.scss
@@ -1,9 +1,10 @@
+@use "variables" as v;
+
 header {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: baseline;
-  margin-top: -0.25rem;
   gap: 1rem 3rem;
 }
 
@@ -27,7 +28,7 @@ nav.languages {
 
   a {
     color: var(--color-text);
-    font-size: 0.8rem;
+    @include v.font-xs;
     text-decoration: none;
     display: block;
 
@@ -65,7 +66,7 @@ nav.languages {
     display: flex;
     align-items: baseline;
 
-    &.active {
+    &.active a {
       font-weight: 700;
     }
 
