--- a/site/css/_variables.scss
+++ b/site/css/_variables.scss
@@ -76,3 +76,43 @@
     --color-overlay-hover: var(--color-blackpurple-60);
   }
 }
+
+// Caption
+@mixin font-xs {
+  font-size: 0.8rem;
+  line-height: 1.1;
+  font-weight: 400;
+}
+
+@mixin font-sm {
+  font-size: calc(min(max(2.5vw + 0.05rem, 0.8rem), 1rem));
+  line-height: calc(min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem));
+}
+
+@mixin font-sm-max-width {
+  max-width: 45em;
+}
+
+@mixin font-md {
+  font-size: calc(min(5vw + 0.1rem, 1.5rem));
+  line-height: 1.4;
+  max-width: 33em;
+}
+
+@mixin font-lg {
+  font-size: calc(min(5vw + 0.2rem, 1.25rem));
+  line-height: 1.3;
+  max-width: 25em;
+}
+
+@mixin font-xl {
+  font-size: calc(min(5vw + 0.3rem, 1.75rem));
+  line-height: 1.3;
+  max-width: 20em;
+}
+
+@mixin font-2xl {
+  font-size: calc(min(5vw + 0.4rem, 4rem));
+  line-height: calc(min(5vw + 0.8rem - 0.1em, 4rem));
+  max-width: 15em;
+}
