--- a/site/css/styles.scss
+++ b/site/css/styles.scss
@@ -2,6 +2,7 @@
 @use "variables";
 @use "global";
 @use "scroll-enabled";
+@use "simple-typewriter";
 @use "header";
 @use "slideshow";
 @use "works";
