--- a/site/css/styles.scss
+++ b/site/css/styles.scss
@@ -4,6 +4,6 @@
 @use "scroll-enabled";
 @use "simple-typewriter";
 @use "header";
-@use "slideshow";
+@use "gallery";
 @use "works";
 @use "footer";
