feat: apply outline to gallery media

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -394,6 +394,8 @@ figure.gallery video {
   display: block;
   transform: translateX(var(--tx, 0));
   z-index: 1;
+  outline: 0.5px solid var(--color-text-20);
+  max-width: 49.5rem;
 }
 figure.gallery ul {
   margin: 0;
