--- a/site/css/templates/profile.scss
+++ b/site/css/templates/profile.scss
@@ -5,8 +5,25 @@ main {
 
   > section > dl,
   .subsection-grid {
-    margin: var(--padding-scaled-05) 0;
+    margin: var(--padding-scaled) 0;
     counter-reset: section;
+    display: grid;
+    gap: var(--padding-scaled);
+    max-width: 99rem;
+
+    @media (min-width: 400px) {
+      margin-top: var(--padding-scaled-05);
+      margin-bottom: var(--padding-scaled-05);
+      gap: var(--padding-scaled-05) var(--padding-scaled);
+    }
+
+    @media (min-width: 1024px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (min-width: 1920px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
   }
 
   @media (min-width: 1024px) {
@@ -79,21 +96,6 @@ main {
 
     @media (prefers-contrast: more) {
       color: var(--color-text-50);
-    }
-  }
-
-  > section > dl,
-  .subsection-grid {
-    display: grid;
-    gap: var(--padding-scaled-05) var(--padding-scaled);
-    max-width: 99rem;
-
-    @media (min-width: 1024px) {
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    @media (min-width: 1920px) {
-      grid-template-columns: repeat(3, 1fr);
     }
   }
 
