--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,14 +222,18 @@ p {
 h1 {
   font-weight: 600;
   margin: var(--padding-scaled) 0 var(--padding-scaled-2) -0.05em;
+  font-size: min(5vw + 0.8rem, 4rem);
+  line-height: min(5vw + 1.2rem - 0.1em, 4rem);
+  max-width: 15em;
 }
 
 h2 {
-  color: var(--color-text-10);
+  color: var(--color-text);
   font-weight: 600;
-  margin: var(--padding-scaled-2) 0 var(--padding-scaled-05) -0.05em;
-  font-size: min(5vw + 0.4rem, 4rem);
-  line-height: min(5vw + 0.8rem - 0.1em, 4rem);
+  margin: var(--padding-scaled-2) 0 var(--padding-scaled-05) -0.025em;
+  font-size: min(5vw + 0.5rem, 3rem);
+  line-height: 1.3;
+  max-width: 20em;
   max-width: 15em;
 }
 @media (min-width: 768px) {
@@ -237,18 +241,12 @@ h2 {
     margin-left: -0.05em;
   }
 }
-@media (prefers-contrast: more) {
-  h2 {
-    color: var(--color-text);
-    font-weight: 400;
-  }
-}
 
 h3 {
   font-size: min(5vw + 0.3rem, 1.75rem);
   line-height: 1.3;
   max-width: 20em;
-  margin: 1.5em 0 0.75em;
+  margin: 1.5em 0 0.75em -0.025em;
   font-weight: 600;
 }
 
@@ -434,7 +432,7 @@ figure.gallery [role=tablist] button {
   padding: 0;
   margin: 0;
 }
-@media (prefers-contrast) {
+@media (prefers-contrast: more) {
   figure.gallery [role=tablist] button {
     border: 1px solid var(--color-text);
   }
