--- a/site/css/_gallery.scss
+++ b/site/css/_gallery.scss
@@ -60,7 +60,7 @@ figure.gallery {
       padding: 0;
       margin: 0;
 
-      @media (prefers-contrast) {
+      @media (prefers-contrast: more) {
         border: 1px solid var(--color-text);
       }
 
