--- a/site/css/_variables.scss
+++ b/site/css/_variables.scss
@@ -112,7 +112,19 @@
 }
 
 @mixin font-2xl {
+  font-size: calc(min(5vw + 0.5rem, 3rem));
+  line-height: 1.3;
+  max-width: 20em;
+}
+
+@mixin font-3xl {
   font-size: calc(min(5vw + 0.4rem, 4rem));
   line-height: calc(min(5vw + 0.8rem - 0.1em, 4rem));
+  max-width: 15em;
+}
+
+@mixin font-4xl {
+  font-size: calc(min(5vw + 0.8rem, 4rem));
+  line-height: calc(min(5vw + 1.2rem - 0.1em, 4rem));
   max-width: 15em;
 }
