refactor: use plain css and remove old font types

--- a/assets/css/templates/profile.css
+++ b/assets/css/templates/profile.css
@@ -1,6 +1,7 @@
 main > section {
   margin: var(--padding-scaled-2) 0;
 }
+
 main > section > dl,
 main .subsection-grid {
   margin: var(--padding-scaled) 0;
@@ -9,7 +10,8 @@ main .subsection-grid {
   gap: var(--padding-scaled);
   max-width: 99rem;
 }
-@media (min-width: 400px) {
+
+@media (min-width: 25rem) {
   main > section > dl,
   main .subsection-grid {
     margin-top: var(--padding-scaled-05);
@@ -17,24 +19,28 @@ main .subsection-grid {
     gap: var(--padding-scaled-05) var(--padding-scaled);
   }
 }
-@media (min-width: 1024px) {
+
+@media (min-width: 64rem) {
   main > section > dl,
   main .subsection-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media (min-width: 1920px) {
+
+@media (min-width: 120rem) {
   main > section > dl,
   main .subsection-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-@media (min-width: 1024px) {
+
+@media (min-width: 64rem) {
   main > section > dl > div > dt,
   main .subsection-grid > section {
     counter-increment: section;
     position: relative;
   }
+
   main > section > dl > div > dt::before,
   main .subsection-grid > section > h3::before {
     content: counter(section, decimal-leading-zero);
@@ -43,88 +49,104 @@ main .subsection-grid {
     right: calc(100% + 0.4em);
     font-weight: 600;
   }
-}
-@media (min-width: 1024px) and (prefers-contrast: more) {
-  main > section > dl > div > dt::before,
-  main .subsection-grid > section > h3::before {
-    color: var(--color-text-50);
+
+  @media (prefers-contrast: more) {
+    main > section > dl > div > dt::before,
+    main .subsection-grid > section > h3::before {
+      color: var(--color-text-50);
+    }
   }
 }
+
 main dt,
 main .subsection-grid h3 {
   display: block;
   margin: 0;
-  font-size: min(5vw + 0.1rem, 1.5rem);
+  font-size: calc(min(5vw + 0.1rem, 1.5rem));
   line-height: 1.4;
   max-width: 33em;
   font-weight: 600;
 }
+
 main dd dl {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
   gap: 0;
 }
+
 main dd dl > div {
   margin-top: var(--padding-scaled-025);
   margin-right: var(--padding-scaled-025);
 }
+
 main dd dl > div.time {
   width: 100%;
   margin: 0;
 }
+
 main dd dt {
   font-size: 0.8rem;
   line-height: 1.4;
   font-weight: 600;
 }
-main section:not(.interests-hobbies) dd,
-main section:not(.interests-hobbies) li {
+
+main section:not(.interests-hobbies) :is(dd, li) {
   margin: 0;
   font-size: 0.8rem;
   line-height: 1.4;
 }
+
 main div.blur {
   color: var(--color-text-20);
 }
+
 @media (prefers-contrast: more) {
   main div.blur {
     color: var(--color-text-50);
   }
 }
+
 main .capabilities dl {
   margin: 1rem 0 0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 0.5rem 0;
 }
+
 main .capabilities ul {
   margin: 0.5em 0 0;
   padding: 0;
 }
+
 main .capabilities li {
   font-weight: 600;
 }
+
 main .capabilities li:not(:first-child) {
   margin-top: 0.5rem;
 }
+
 main .capabilities li::marker {
   color: transparent;
 }
-main .capabilities dt,
-main .capabilities dd {
+
+main .capabilities :is(dt, dd) {
   font-size: 0.8rem;
   line-height: 1.4;
 }
+
 main .capabilities dt {
   font-weight: 600;
 }
+
 main .capabilities dd {
   font-size: 0.8rem;
   line-height: 1.4;
   align-self: center;
   position: relative;
 }
+
 main .capabilities .level-description {
   display: block;
   font-size: 0.55rem;
@@ -133,19 +155,23 @@ main .capabilities .level-description {
   right: 0;
   top: -0.8rem;
 }
+
 main .capabilities .level {
   width: 100%;
   height: 0.2rem;
   display: flex;
 }
+
 main .capabilities .level > div {
   flex: 1 1 0;
   background-color: var(--color-text-10);
 }
+
 main .capabilities .level > div.active {
   flex: 1 1 0;
   background-color: var(--color-focus);
 }
+
 main .capabilities .level > div:not(:first-child) {
   margin-left: 0.2rem;
 }
@@ -158,16 +184,17 @@ main .capabilities .level > div:not(:first-child) {
   margin-top: -0.5em;
   max-width: 40em;
 }
+
 .interests-hobbies li {
   margin-top: 0.5em;
   margin-right: 1em;
 }
+
 .interests-hobbies li::before {
   content: "#";
   color: var(--color-text-40);
 }
+
 .interests-hobbies li::marker {
   color: transparent;
 }
-
-/*# sourceMappingURL=profile.css.map */
