--- a/assets/css/templates/work.css
+++ b/assets/css/templates/work.css
@@ -7,11 +7,13 @@ div.work-information {
   max-width: none;
   gap: var(--padding-scaled);
 }
-@media (min-width: 1550px) {
+
+@media (min-width: 96.875rem) {
   div.work-information {
     grid-template-columns: 33em 1fr;
   }
 }
+
 div.work-information > section {
   margin: 0;
 }
@@ -25,25 +27,28 @@ section.key-data {
   line-height: 1.4;
   margin: var(--padding-scaled) 0;
 }
-@media (min-width: 1500px) {
+
+@media (min-width: 93.75rem) {
   section.key-data dl {
     margin: 0.5em 0 0;
   }
 }
+
 section.key-data dl div:not(:first-child) {
   margin-top: 0.5em;
 }
+
 section.key-data dl dt {
   font-weight: 600;
   display: block;
   margin: 0;
 }
+
 section.key-data dl dd {
   display: inline;
   margin: 0;
 }
+
 section.key-data dl dd:not(:last-child)::after {
   content: ", ";
 }
-
-/*# sourceMappingURL=work.css.map */
