--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-  // colors
+  /* colors */
   --color-lightgrey: #eae8f0;
   --color-lightgrey-90: rgba(234, 232, 240, 0.9);
   --color-lightgrey-80: rgba(234, 232, 240, 0.8);
@@ -23,7 +23,7 @@
   --color-blackpurple-20: rgba(20, 18, 33, 0.2);
   --color-blackpurple-10: rgba(20, 18, 33, 0.1);
 
-  // semantic colors
+  /* semantic colors */
   --color-background: var(--color-theme-background, var(--color-lightgrey));
   --color-link: var(--color-theme-link, var(--color-deeppurple));
   --color-link-hover: var(--color-theme-link-hover, var(--color-deeppurple));
@@ -43,10 +43,27 @@
     var(--color-lightpurple)
   );
 
-  // fonts
-  --font-family: "Borna", sans-serif;
+  /* fonts */
+  --font-family: "Borna", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
-  // spacing
+  --font-xs: 400 0.8rem/1.1 var(--font-family);
+  --font-sm-max-width: unset;
+  --font-sm: calc(min(max(2.5vw + 0.05rem, 0.8rem), 1rem))/calc(min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem)) var(--font-family);
+  --font-sm-max-width: 45em;
+  --font-md: calc(min(5vw + 0.1rem, 1.5rem))/1.4 var(--font-family);
+  --font-md-max-width: 33em;
+  --font-lg: calc(min(5vw + 0.2rem, 1.25rem))/1.3 var(--font-family);
+  --font-lg-max-width: 25em;
+  --font-xl: calc(min(5vw + 0.3rem, 1.75rem))/1.3 var(--font-family);
+  --font-xl-max-width: 20em;
+  --font-2xl: calc(min(5vw + 0.5rem, 3rem))/1.3 var(--font-family);
+  --font-2xl-max-width: 20em;
+  --font-3xl: calc(min(5vw + 0.4rem, 4rem))/calc(min(5vw + 0.8rem - 0.1em, 4rem)) var(--font-family);
+  --font-3xl-max-width: 15em;
+  --font-4xl: calc(min(5vw + 0.8rem, 4rem))/calc(min(5vw + 1.2rem - 0.1em, 4rem)) var(--font-family);
+  --font-4xl-max-width: 15em;
+
+  /* spacing */
   --padding-scaled-025: calc(min(1.25vw + 0.275rem, 1.175rem));
   --padding-scaled-05: calc(min(2.5vw + 0.55rem, 2.35rem));
   --padding-scaled: calc(min(5vw + 1.1rem, 4.7rem));
@@ -55,7 +72,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    // adjust semantic colors
+    /* adjust semantic colors */
     --color-background: var(
       --color-theme-dark-background,
       var(--color-blackpurple)
@@ -81,56 +98,4 @@
       var(--color-deeppurple)
     );
   }
-}
-
-// Caption
-@mixin font-xs {
-  font-size: 0.8rem;
-  line-height: 1.1;
-  font-weight: 400;
-}
-
-@mixin font-sm {
-  font-size: calc(min(max(2.5vw + 0.05rem, 0.8rem), 1rem));
-  line-height: calc(min(max(2.5vw + 0.05rem + 0.4em, 1.2rem), 1.4rem));
-}
-
-@mixin font-sm-max-width {
-  max-width: 45em;
-}
-
-@mixin font-md {
-  font-size: calc(min(5vw + 0.1rem, 1.5rem));
-  line-height: 1.4;
-  max-width: 33em;
-}
-
-@mixin font-lg {
-  font-size: calc(min(5vw + 0.2rem, 1.25rem));
-  line-height: 1.3;
-  max-width: 25em;
-}
-
-@mixin font-xl {
-  font-size: calc(min(5vw + 0.3rem, 1.75rem));
-  line-height: 1.3;
-  max-width: 20em;
-}
-
-@mixin font-2xl {
-  font-size: calc(min(5vw + 0.5rem, 3rem));
-  line-height: 1.3;
-  max-width: 20em;
-}
-
-@mixin font-3xl {
-  font-size: calc(min(5vw + 0.4rem, 4rem));
-  line-height: calc(min(5vw + 0.8rem - 0.1em, 4rem));
-  max-width: 15em;
-}
-
-@mixin font-4xl {
-  font-size: calc(min(5vw + 0.8rem, 4rem));
-  line-height: calc(min(5vw + 1.2rem - 0.1em, 4rem));
-  max-width: 15em;
 }
